Fix overflow payment link

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ a.primary {
   color: #3FD3C3;
 }
 
+.overflow-break {
+  overflow-wrap: break-word !important;
+}
+
 .pointer {
   cursor: pointer;
 }
